--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .inputHalf{
-  
+
 }
 
 .outputHalf {
@@ -22,6 +22,7 @@
   color: red;
   font-size: 20px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .input-center{
@@ -30,4 +31,34 @@
   justify-content: center;
   align-content: center;
   margin: 15px;
+}
+
+.center-theme-button{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.default-theme{
+  background-color: yellow;
+}
+
+.halloween-theme{
+  background-color: orange;
+}
+
+.usa-theme{
+  background-color: red;
+}
+
+.money-theme{
+  background-color: green;
+}
+
+.theme-menu{
+  cursor: pointer;
+}
+
+.hover-theme{
+  background-color: blue;
 }
