--- a/css/styles.css
+++ b/css/styles.css
@@ -66,3 +66,13 @@
 .api-styles{
   margin-top: 50px;
 }
+
+.api-img{
+  margin: 10px;
+  border: 3px solid red;
+}
+
+.api-holder{
+  border: 2px solid green;
+  margin: 20px;
+}
