--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 
 .outputHalf {
   border: 1px solid black;
+  border-radius: 5px;
 }
 
 .outputHolder {
@@ -60,19 +61,33 @@
 }
 
 .hover-theme{
-  background-color: blue;
+  background-color: black;
+  color: white;
+  font-size: 20px;
 }
 
 .api-styles{
-  margin-top: 50px;
+  display: flex;
+  justify-content: center;
 }
 
 .api-img{
   margin: 10px;
   border: 3px solid red;
+  border-radius: 5px;
 }
 
 .api-holder{
   border: 2px solid green;
   margin: 20px;
+  border-radius: 5px;
+}
+
+.space-api{
+  margin-top: 50px;
+}
+
+.theme-button-bg{
+  background-color: white;
+  border-radius: 5px;
 }
